# NovaLang-LLVM-Based-Compiler-Backend

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/ast/: ASTNode.h  ASTPrinter.h  AssignStmt.h  BinaryExpr.h  BoolExpr.h  CallExpr.h  ComparisonExpr.h  Expr.h  ExpressionStmt.h  FunctionStmt.h  IfStmt.h  LetStmt.h  NumberExpr.h  Program.h  ReturnStmt.h  Stmt.h  VariableExpr.h  WhileStmt.h
src/backend/: CFGBuilder.cpp  CFGBuilder.h  CFGSimplification.cpp  CFGSimplification.h  ConstantFolding.cpp  ConstantFolding.h  CopyPropagation.cpp  CopyPropagation.h  DeadCodeElimination.cpp  DeadCodeElimination.h  DominanceFrontier.cpp  DominanceFrontier.h  DominatorAnalysis.cpp  DominatorAnalysis.h  DominatorTree.cpp  DominatorTree.h  IDominatorTree.cpp  IDominatorTree.h  InstructionSelector.cpp  InstructionSelector.h  MachinePrinter.cpp  MachinePrinter.h  Mem2Reg.cpp  Mem2Reg.h  OptimizationPipeline.cpp  OptimizationPipeline.h  PHIBuilder.cpp  PHIBuilder.h  PHIInserter.cpp  PHIInserter.h  PHINodePass.cpp  PHINodePass.h  SSABuilder.cpp  SSABuilder.h  SSARenamer.cpp  SSARenamer.h  SSAValue.h  SSAVariables.cpp  SSAVariables.h
src/backend/machine/: MachineFunction.h  MachineInst.h  RegisterAllocator.cpp  RegisterAllocator.h
src/codegen/: LLVMCodeGen.cpp  LLVMCodeGen.h
src/lexer/: Lexer.cpp  Lexer.h  Token.h
src/optimizer/: ASTOptimizer.cpp  ASTOptimizer.h
src/parser/: Parser.cpp  Parser.h
src/semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  Symbol.h  SymbolTable.cpp  SymbolTable.h  Type.h
